# ceph

./: .gitignore  0029-Support-ceph-cluster-names-with-sys.patch  CMakeLists.txt  Makefile.am  ceph.changes  ceph.spec  ceph.spec.in  configure.ac
debian/: ceph.install  control  rules
doc/: Makefile.am  release-notes.rst
doc/man/8/: CMakeLists.txt
doc/start/: quick-start-preflight.rst
etc/permissions.d/: radosgw.easy  radosgw.paranoid
man/: Makefile-server.am
src/: .gitattributes  .github_version  CMakeLists.txt  Makefile-env.am  Makefile.am  ceph-disk  ceph-disk-udev  ceph-objectstore-tool  ceph-rgw-prestart.sh  cephfs-journal-tool  cephfs-table-tool  init-ceph.in  init-radosgw  init-radosgw.sysv  logrotate.conf  make_version  rbd-replay  replicated_ruleset-absolute_weights.csv  replicated_ruleset-device_utilization_all.csv  replicated_ruleset-placement_information.csv  replicated_ruleset-proportional_weights.csv  vstart.sh
src/client/: Client.cc  Client.h
src/common/: config_opts.h
src/librados/: RadosClient.cc  librados.cc
src/librbd/: ImageCtx.cc
src/mds/: Beacon.cc  MDSDaemon.cc  MDSDaemon.h  MDSRank.cc  MDSRank.h
src/mon/: AuthMonitor.cc  MDSMonitor.cc  MonClient.h  Monitor.cc  OSDMonitor.cc
src/msg/: Message.h
src/os/: FileStore.cc
src/osd/: OSD.cc  OSD.h  ReplicatedPG.cc  ReplicatedPG.h
src/pybind/: ceph_argparse.py
src/rgw/: Makefile.am
src/test/: Makefile.am
src/tools/: radosacl.cc  scratchtool.c  scratchtoolpp.cc
systemd/: Makefile.am  ceph  ceph-disk@.service  ceph-osd@.service  ceph-osd@.service.in  ceph-rgw@.service
(+14 files in other folders)
